[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'nn-dataset'
dynamic = ['version', 'dependencies']
description = 'Neural Network Dataset'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = 'LICENSE' }
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
]

keywords = ['neural network', 'dataset', 'experiment archive', 'hyperparameters', 'autoML', 'LLM integration', 'model validation', 'benchmarking', 'python library', 'AI research']
authors = [{ name = 'ABrain One and contributors', email = 'AI@ABrain.one' }]

[project.urls]
Homepage = 'https://ABrain.one'
Repository = 'https://github.com/ABrain-One/nn-dataset'
'Bug Tracker' = 'https://github.com/ABrain-One/nn-dataset/issues'

[tool.setuptools.dynamic]
version = { file = 'version' }
dependencies = { file = 'requirements.txt' }

[tool.setuptools.packages.find]
where = ["."]
include = ["ab", "ab.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
'ab' = ['**/*.json']

[tool.setuptools.package-data]
'doc' = ['licenses/*']
'*' = ['requirements.txt', 'LICENSE', 'version', '*.md']

[project.optional-dependencies]
stat = ['nn-stat']
